# bbtrackball-rs

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: kicad-exports.yml
hardware/Sparkfun_Trackballer/: SparkFun_Blackberry_Trackballer_Breakout_v13.brd  SparkFun_Blackberry_Trackballer_Breakout_v13.sch
hardware/Sparkfun_Trackballer/kicad/: SparkFun_Blackberry_Trackballer_Breakout_v13-cache.lib  SparkFun_Blackberry_Trackballer_Breakout_v13-eagle-import.lib  SparkFun_Blackberry_Trackballer_Breakout_v13.kicad_pcb  SparkFun_Blackberry_Trackballer_Breakout_v13.pro  SparkFun_Blackberry_Trackballer_Breakout_v13.sch  fp-lib-table  sym-lib-table
hardware/Sparkfun_Trackballer/kicad/SparkFun_Blackberry_Trackballer_Breakout_v13.pretty/: 0603-CAP.kicad_mod  0603-RES.kicad_mod  1X03.kicad_mod  1X04.kicad_mod  FIDUCIAL-1X2.kicad_mod  LED-0603.kicad_mod  SC70.kicad_mod  SFE_LOGO_NAME_FLAME_.2.kicad_mod  STAND-OFF.kicad_mod  TACTILE_SWITCH_SMD-2.kicad_mod  TRACKBALL.kicad_mod
hardware/stm32-2U/: stm32_dev.ioc  stm32_dev.sch
hardware/stm32-dev-0.1/: stm32_dev.kicad_pcb  stm32_dev.sch  sym-lib-table
hardware/stm32-trackball/: stm32_dev-cache.lib  stm32_dev.kicad_pcb  stm32_dev.pro  stm32_dev.sch  sym-lib-table
hardware/stm32-trackball-2U/: stm32_dev.kicad_pcb  stm32_dev.pro  stm32_dev.sch
software/atmega328/: .embed.toml  Cargo.toml  README.md  avr-atmega328p.json
software/atmega328/.cargo/: config
software/lpc845/: Cargo.toml  README.md
software/lpc845/.cargo/: config
software/lpc845/src/: main.rs
software/stm32f04/: .embed.toml  Cargo.toml  Embed.toml  README.md  dfu.sh  memory.x
software/stm32f04/.cargo/: config
software/stm32f04/src/: button_scanner.rs  hid.rs  main.rs  report.rs  trackball.rs
