[package]
name = "stm32f042"
version = "0.1.0"
authors = ["Roman Valls Guimera <brainstorm@nopcode.org>", "Josh Johnson <>"]
edition = "2018"

[dependencies]
embedded-hal = "0.2.4"
usb-device = "0.2.5"
usbd-serial = "0.1.0"
usbd-hid-device = "0.1.1"
panic-semihosting = "0.5"
cortex-m = "0.6.3"
cortex-m-rtic = { version = "0.5.3" }
stm32f0xx-hal = { version = "0.17.0", features = ["rt", "stm32f042", "stm32-usbd"] }
stm32-usbd = { version = "0.5.1", features = ["ram_access_2x16"] }

[build]
target = "thumbv6m-none-eabi"